feat: change handler strategy
